--- a/yaml_files/convolutionalh064h164h264.yaml
+++ b/yaml_files/convolutionalh064h164h264.yaml
@@ -15,7 +15,7 @@
         },
         layers: [ !obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: 'h0',
-                     output_channels: 32,
+                     output_channels: 64,
                      irange: .05,
                      kernel_shape: [5, 5],
                      pool_shape: [4, 4],
@@ -23,7 +23,15 @@
                      max_kernel_norm: 1.9365,
                  }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: 'h1',
-                     output_channels: 32,
+                     output_channels: 64,
+                     irange: .05,
+                     kernel_shape: [5, 5],
+                     pool_shape: [4, 4],
+                     pool_stride: [3, 3],
+                     max_kernel_norm: 1.9365,
+                 }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
+                     layer_name: 'h2',
+                     output_channels: 64,
                      irange: .05,
                      kernel_shape: [5, 5],
                      pool_shape: [4, 4],
@@ -71,13 +79,13 @@
     extensions:
         [ !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: 'valid_y_misclass',
-             save_path: "convolutionalTest_best.pkl"
+             save_path: "convolutionalh064h164h264_best.pkl"
         }, !obj:pylearn2.training_algorithms.sgd.MomentumAdjustor {
             start: 1,
             saturate: 250,
             final_momentum: .99
         }
     ],
-    save_path: "convolutionalTest.pkl",
+    save_path: "convolutionalh064h164h264.pkl",
     save_freq: 1
 }
