--- a/yaml_files/convolutionalh064h164dropI1h01h1.5SGWD.yaml
+++ b/yaml_files/convolutionalh064h164dropI1h01h1.5SGWD.yaml
@@ -14,14 +14,6 @@
                 num_channels: 1,
          },
             transformations: [
-                !obj:transformer.TransformationPool {
-                    p_distribution: [0.4, 0.3, 0.3],
-                    transformations: [
-                        !obj:transformer.GaussianNoise { p: 0.5 },
-                        !obj:transformer.Sharpening { p: 0.5 },
-                        !obj:transformer.Denoising { p: 0.5 }
-                    ],
-                },
                 !obj:transformer.Occlusion {},
                 !obj:transformer.HalfFace {},
                 !obj:transformer.Translation {},
@@ -60,7 +52,7 @@
                      istdev: .05
                  }
                 ],
-        dropout_include_probs: [ .5, .5, 1 ],
+        dropout_include_probs: [ 1, .5, 1 ],
         dropout_input_include_prob: 1,
         dropout_input_scale: 1.,
     },
@@ -85,10 +77,15 @@
                               fit_preprocessor: True
                           }
             },
-        cost: !obj:pylearn2.costs.cost.MethodCost {
+        cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [
+            !obj:pylearn2.costs.cost.MethodCost {
                 method: 'cost_from_X',
                 supervised: 1
-         },
+            }, !obj:pylearn2.models.mlp.WeightDecay {
+                coeffs: [ .00005, .00005, .00005 ]
+            }
+            ]
+        },
         termination_criterion: !obj:pylearn2.termination_criteria.MonitorBased {
             channel_name: "valid_y_misclass",
             prop_decrease: 0.,
@@ -98,13 +95,13 @@
     extensions:
         [ !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: 'valid_y_misclass',
-             save_path: "convolutionalh064h164dropI1h0.5h1.5SG_best.pkl"
+             save_path: "convolutionalh064h164dropI1h01h1.5SGWD_best.pkl"
         }, !obj:pylearn2.training_algorithms.sgd.MomentumAdjustor {
             start: 1,
             saturate: 250,
             final_momentum: .99
         }
     ],
-    save_path: "convolutionalh064h164dropI1h0.5h1.5SG.pkl",
+    save_path: "convolutionalh064h164dropI1h01h1.5SGWD.pkl",
     save_freq: 1
 }
