--- a/yaml_files/convolutionalh064h164dropI1h01h11SGWD.yaml
+++ b/yaml_files/convolutionalh064h164dropI1h01h11SGWD.yaml
@@ -1,12 +1,28 @@
 !obj:pylearn2.train.Train {
-    dataset: !obj:contest_dataset.ContestDataset {
+    dataset: &train !obj:contestTransformerDataset.TransformerDataset {
+        raw : !obj:contest_dataset.ContestDataset {
             which_set: 'train',
             start: 0,
             stop: 3400,
             preprocessor : !obj:pylearn2.datasets.preprocessing.Standardize {},
             fit_preprocessor: True,
             fit_test_preprocessor: True,
-        },
+},
+        transformer : !obj:transformer.TransformationPipeline {
+            input_space: !obj:pylearn2.space.Conv2DSpace {
+                shape: [48, 48],
+                num_channels: 1,
+         },
+            transformations: [
+                !obj:transformer.Occlusion {},
+                !obj:transformer.HalfFace {},
+                !obj:transformer.Translation {},
+                !obj:transformer.Scaling {},
+                !obj:transformer.Rotation {},
+                !obj:transformer.Flipping {}
+        ] },
+        space_preserving : True,
+},
     model: !obj:pylearn2.models.mlp.MLP {
         batch_size: 100,
         input_space: !obj:pylearn2.space.Conv2DSpace {
@@ -36,8 +52,8 @@
                      istdev: .05
                  }
                 ],
-        dropout_include_probs: [ .5, .5, 1 ],
-        dropout_input_include_prob: .5,
+        dropout_include_probs: [ 1, 1, 1 ],
+        dropout_input_include_prob: 1,
         dropout_input_scale: 1.,
     },
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
@@ -61,10 +77,15 @@
                               fit_preprocessor: True
                           }
             },
-        cost: !obj:pylearn2.costs.cost.MethodCost {
+        cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [
+            !obj:pylearn2.costs.cost.MethodCost {
                 method: 'cost_from_X',
                 supervised: 1
-         },
+            }, !obj:pylearn2.models.mlp.WeightDecay {
+                coeffs: [ .00005, .00005, .00005 ]
+            }
+            ]
+        },
         termination_criterion: !obj:pylearn2.termination_criteria.MonitorBased {
             channel_name: "valid_y_misclass",
             prop_decrease: 0.,
@@ -74,13 +95,13 @@
     extensions:
         [ !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: 'valid_y_misclass',
-             save_path: "convolutionalh064h164dropI.5h0.5h1.5_best.pkl"
+             save_path: "convolutionalh064h164dropI1h01h11SGWD_best.pkl"
         }, !obj:pylearn2.training_algorithms.sgd.MomentumAdjustor {
             start: 1,
             saturate: 250,
             final_momentum: .99
         }
     ],
-    save_path: "convolutionalh064h164dropI.5h0.5h1.5.pkl",
+    save_path: "convolutionalh064h164dropI1h01h11SGWD.pkl",
     save_freq: 1
 }
