--- a/yaml_files/test3.yaml
+++ b/yaml_files/test3.yaml
@@ -15,7 +15,7 @@
         layers: [
                  !obj:pylearn2.models.mlp.Tanh {
                      layer_name: 'h0',
-                     dim: 500,
+                     dim: 300,
                      sparse_init: 15
                  },
                  !obj:pylearn2.models.mlp.Linear {
@@ -24,10 +24,7 @@
                      sparse_init: 5
                  }
                 ],
-        nvis: 9216,
-        dropout_include_probs: [ .5, 1. ],
-        dropout_input_include_prob: .5,
-        dropout_input_scale: 1.,
+        nvis: 9216
     },
 
     # We use SGD as our training algorithm
@@ -49,25 +46,34 @@
                 # We don't have labels for the public test set
             },
         # The cost function is
-        cost: !obj:pylearn2.costs.mlp.missing_target_cost.MissingTargetCost {
+        cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [
+            !obj:pylearn2.costs.mlp.missing_target_cost.MissingTargetCost {
+            }, !obj:pylearn2.models.mlp.WeightDecay {
+                coeffs: [ .0005, 0. ]
+            }
+            ]
         },
         # The termination criteria
         termination_criterion: !obj:pylearn2.termination_criteria.MonitorBased {
             channel_name: "valid_objective",
             prop_decrease: 0.,
             N: 15
+        },
+        update_callbacks: !obj:pylearn2.training_algorithms.sgd.ExponentialDecay {
+            decay_factor: 1.00004,
+            min_lr: .000001
         }
     },
     extensions: [
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: 'valid_objective',
-             save_path: "test0_best.pkl"
+             save_path: "test3_best.pkl"
         }, !obj:pylearn2.training_algorithms.sgd.MomentumAdjustor {
             start: 1,
             saturate: 50,
             final_momentum: .99
         }
     ],
-    save_path: "test0.pkl",
+    save_path: "test3.pkl",
     save_freq: 1
 }
