--- a/yaml_files/1MLP_LR_0001Mom_095.yaml
+++ b/yaml_files/1MLP_LR_0001Mom_095.yaml
@@ -30,8 +30,8 @@
     # We use SGD as our training algorithm
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
         batch_size: 100,
-        learning_rate: 0.001,
-        init_momentum: 0.9,
+        learning_rate: 0.0001,
+        init_momentum: 0.95,
         # What we monitor
         monitoring_dataset:
             {
@@ -46,34 +46,25 @@
                 # We don't have labels for the public test set
             },
         # The cost function is
-        cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [
-            !obj:pylearn2.costs.mlp.missing_target_cost.MissingTargetCost {
-            }, !obj:pylearn2.models.mlp.WeightDecay {
-                coeffs: [ .0005, 0. ]
-            }
-            ]
+        cost: !obj:pylearn2.costs.mlp.missing_target_cost.MissingTargetCost {
         },
         # The termination criteria
         termination_criterion: !obj:pylearn2.termination_criteria.MonitorBased {
             channel_name: "valid_objective",
             prop_decrease: 0.,
             N: 15
-        },
-        update_callbacks: !obj:pylearn2.training_algorithms.sgd.ExponentialDecay {
-            decay_factor: 1.00004,
-            min_lr: .000001
         }
     },
     extensions: [
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: 'valid_objective',
-             save_path: "test3_best.pkl"
+             save_path: "1MLP_LR_0001Mom_095_best.pkl"
         }, !obj:pylearn2.training_algorithms.sgd.MomentumAdjustor {
             start: 1,
             saturate: 50,
             final_momentum: .99
         }
     ],
-    save_path: "test3.pkl",
+    save_path: "1MLP_LR_0001Mom_095.pkl",
     save_freq: 1
 }
