--- a/yaml_files/1MLP_LR_01Mom_09.yaml
+++ b/yaml_files/1MLP_LR_01Mom_09.yaml
@@ -30,7 +30,7 @@
     # We use SGD as our training algorithm
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
         batch_size: 100,
-        learning_rate: 0.001,
+        learning_rate: 0.01,
         init_momentum: 0.9,
         # What we monitor
         monitoring_dataset:
@@ -46,34 +46,25 @@
                 # We don't have labels for the public test set
             },
         # The cost function is
-        cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [
-            !obj:pylearn2.costs.mlp.missing_target_cost.MissingTargetCost {
-            }, !obj:pylearn2.models.mlp.WeightDecay {
-                coeffs: [ .0005, .0005 ]
-            }
-            ]
+        cost: !obj:pylearn2.costs.mlp.missing_target_cost.MissingTargetCost {
         },
         # The termination criteria
         termination_criterion: !obj:pylearn2.termination_criteria.MonitorBased {
             channel_name: "valid_objective",
             prop_decrease: 0.,
             N: 15
-        },
-        update_callbacks: !obj:pylearn2.training_algorithms.sgd.ExponentialDecay {
-            decay_factor: 1.00004,
-            min_lr: .000001
         }
     },
     extensions: [
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: 'valid_objective',
-             save_path: "test2_best.pkl"
+             save_path: "1MLP_LR_01Mom_09_best.pkl"
         }, !obj:pylearn2.training_algorithms.sgd.MomentumAdjustor {
             start: 1,
             saturate: 50,
             final_momentum: .99
         }
     ],
-    save_path: "test2.pkl",
+    save_path: "1MLP_LR_01Mom_09.pkl",
     save_freq: 1
 }
